--- a/4_Zip Your Project Files and Submit.ipynb
+++ b/4_Zip Your Project Files and Submit.ipynb
@@ -22,9 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook 2_Training.ipynb to html\n",
+      "[NbConvertApp] Writing 309953 bytes to 2_Training.html\n",
+      "[NbConvertApp] Converting notebook 3_Inference.ipynb to html\n",
+      "[NbConvertApp] Writing 1100200 bytes to 3_Inference.html\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert \"2_Training.ipynb\"\n",
     "!jupyter nbconvert \"3_Inference.ipynb\""
@@ -86,9 +97,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
