added two html files

--- a/2_Training.ipynb
+++ b/2_Training.ipynb
@@ -62,6 +62,16 @@
     "- LSTM: Inputs the object detection of ResNet50 and the embedded words \n",
     "- Fully connected Layer: Maps the inner states of the LSTM to a predicted word\n",
     "\n",
+    "The following hyperparameter where choosen\n",
+    "```python\n",
+    "batch_size = 256           # batch size\n",
+    "vocab_threshold = 4        # minimum word count threshold\n",
+    "vocab_from_file = True     # if True, load existing vocab file\n",
+    "embed_size = 512           # dimensionality of image and word embeddings \n",
+    "lr=0.001                   # learning rate for Adam\n",
+    "```\n",
+    "This renders a GPU memory consumption of around 7GB \n",
+    "\n",
     "### (Optional) Task #2\n",
     "\n",
     "Note that we have provided a recommended image transform `transform_train` for pre-processing the training images, but you are welcome (and encouraged!) to modify it as you wish.  When modifying this transform, keep in mind that:\n",
