added print code

--- a/4_Zip Your Project Files and Submit.ipynb
+++ b/4_Zip Your Project Files and Submit.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,15 +30,13 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook 2_Training.ipynb to html\n",
-      "[NbConvertApp] Writing 310873 bytes to 2_Training.html\n",
-      "[NbConvertApp] Converting notebook 3_Inference.ipynb to html\n",
-      "[NbConvertApp] Writing 1100200 bytes to 3_Inference.html\n"
+      "[NbConvertApp] Writing 361884 bytes to 2_Training.html\n"
      ]
     }
    ],
    "source": [
     "!jupyter nbconvert \"2_Training.ipynb\"\n",
-    "!jupyter nbconvert \"3_Inference.ipynb\""
+    "#!jupyter nbconvert \"3_Inference.ipynb\""
    ]
   },
   {
